@@ -1,1 +1,1 @@
-#define GGNFS_VERSION "0.77.1-050812"
+#define GGNFS_VERSION "0.77.1-050812-x86_64"
